--- a/index.html
+++ b/index.html
@@ -268,6 +268,22 @@
         </div>
       </div>
     </section>
+    <section class="public-chat">
+      <h2 style="text-align: center; color: #fff; margin-bottom: 10px">
+        💬 Загальний чат
+      </h2>
+      <iframe
+        src="https://rumbletalk.com/client/chat.php?vrmuGmfT"
+        width="100%"
+        height="400"
+        frameborder="0"
+        style="
+          border-radius: 10px;
+          box-shadow: 0 0 15px rgba(157, 149, 204, 0.5);
+        "
+      >
+      </iframe>
+    </section>
     <footer>
       <div class="podval">
         <p>
