--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
       <button class="auto1">Реєстрація</button>
     </nav>
     <header>
+      <button id="toggle-music" class="music-btn">🎵 Увімкнути музику</button>
+      <audio id="bg-music" loop>
+        <source
+          src="./assets/audio/unbreakable-spirit-20240527-154638.mp3"
+          type="audio/mpeg"
+        />
+      </audio>
       <h1 class="popular">ПОПУЛЯРНЕ</h1>
 
       <div class="out-pop pop-anime">
@@ -299,9 +306,73 @@
           <span style="color: rgb(167, 17, 17)"
             ><u>Вікове обмеження 16+</u></span
           >
+          <button class="rules">Правила</button>
         </p>
       </div>
     </footer>
+
+    <div id="rulesModal" class="modal">
+      <div class="modal-content rules-content">
+        <span class="close-btn close-rules">&times;</span>
+        <h2>Загальні правила поведінки на сайті</h2>
+        <div class="rules-text">
+          <p>
+            Почнемо з того, що на сайті спілкуються сотні людей, різних релігій
+            та поглядів, і всі вони є повноправними відвідувачами нашого сайту,
+            тому якщо ми хочемо, щоб ця спільнота людей функціонувала нам та
+            необхідні правила.
+          </p>
+          <p>
+            Ми настійно рекомендуємо прочитати ці правила, це займе у вас всього
+            хвилин п'ять, але збереже нам і вам час і допоможе зробити сайт
+            більш цікавим та організованим.
+          </p>
+          <p>
+            Почнемо з того, що на нашому сайті потрібно поводитись шанобливо до
+            всіх відвідувачів сайту. Не треба образ стосовно учасників, це
+            завжди зайве. Якщо є претензії — звертайтесь до адмінів або
+            модераторів (скористайтеся особистими повідомленнями).
+          </p>
+          <p>
+            Образа інших відвідувачів вважається у нас одним із найтяжчих
+            порушень і суворо карається адміністрацією.
+          </p>
+          <p>
+            У нас суворо заборонено расизм, релігійні та політичні
+            висловлювання.
+          </p>
+          <p><strong>На сайті суворо заборонено:</strong></p>
+          <ul>
+            <li>
+              повідомлення, що не відносяться до змісту статті або до контексту
+              обговорення
+            </li>
+            <li>образа та погрози на адресу відвідувачів сайту</li>
+            <li>
+              вислови, що містять ненормативну лексику, принижують гідність або
+              розпалюють розбіжності
+            </li>
+          </ul>
+          <p>
+            Давайте поважатимемо один одного і сайт, на який Ви та інші читачі
+            приходять поспілкуватися і висловити свої думки.
+          </p>
+          <p>
+            Адміністрація сайту залишає за собою право видаляти коментарі або
+            частину коментарів, якщо вони не відповідають цим вимогам.
+          </p>
+          <p>
+            У разі порушення правил вам може бути дано попередження. У деяких
+            випадках може бути надано бан без попереджень.
+          </p>
+          <p>
+            З питань зняття бана писати адміністратору. Образа адміністраторів
+            або модераторів також караються баном — поважайте чужу працю.
+          </p>
+        </div>
+      </div>
+    </div>
+
     <div id="authModal" class="modal">
       <div class="modal-content">
         <span class="close-btn">&times;</span>
@@ -358,5 +429,28 @@
     <div id="anime-helper">
       <img class="aniitachi" src="./assets/img/5Mys.gif" alt="Аніме Помічник" />
     </div>
+    <script>
+      const music = document.getElementById("bg-music");
+      const toggleBtn = document.getElementById("toggle-music");
+      let isPlaying = false;
+
+      toggleBtn.addEventListener("click", () => {
+        if (!isPlaying) {
+          music
+            .play()
+            .then(() => {
+              toggleBtn.textContent = "🔇 Вимкнути музику";
+              isPlaying = true;
+            })
+            .catch((err) => {
+              console.log("Автовідтворення заборонене:", err);
+            });
+        } else {
+          music.pause();
+          toggleBtn.textContent = "🎵 Увімкнути музику";
+          isPlaying = false;
+        }
+      });
+    </script>
   </body>
 </html>
