--- a/index.html
+++ b/index.html
@@ -16,53 +16,7 @@
 
       <div class="menu" id="navMenu">
         <a class="men" href="./index.html">ГОЛОВНА</a>
-        <div class="dropdown">
-          <a class="men" href="#" id="filter-genre">ЖАНРИ</a>
-          <div class="dropdown-content grid-genres">
-            <a href="genre.html?genre=Action" class="genre-item">Екшн</a>
-            <a href="genre.html?genre=Comedy" class="genre-item">Комедія</a>
-            <a href="genre.html?genre=Romance" class="genre-item">Романтика</a>
-            <a href="genre.html?genre=Drama" class="genre-item">Драма</a>
-            <a href="genre.html?genre=Fantasy" class="genre-item">Фентезі</a>
-            <a href="genre.html?genre=Horrors" class="genre-item">Жахи</a>
-            <a href="genre.html?genre=Adventures" class="genre-item">Пригоди</a>
-            <a href="genre.html?genre=Mysticism" class="genre-item">Містика</a>
-            <a href="genre.html?genre=Psychology" class="genre-item"
-              >Психологія</a
-            >
-            <a href="genre.html?genre=Isekai" class="genre-item">Ісекай</a>
-            <a href="genre.html?genre=Sport" class="genre-item">Спорт</a>
-            <a href="genre.html?genre=Mecha" class="genre-item">Меха</a>
-            <a href="genre.html?genre=School" class="genre-item">Школа</a>
-            <a href="genre.html?genre=Vampire"genre.html?genre=Detective" class="genre-item">Детектив</a>
-            <a href="genre.html?genre=Thriller" class="genre-item">Трилер</a>
-            <a href="genre.html?genre=Everyday_life" class="genre-item"
-              >Повсякденність</a
-            >
-          </div>
-        </div>
-        <div class="dropdown">
-          <a class="men" href="">РІК</a>
-          <div class="dropdown-content grid-genres">
-            <a href="">2009</a>
-            <a href="">2010</a>
-            <a href="">2011</a>
-            <a href="">2012</a>
-            <a href="">2013</a>
-            <a href="">2014</a>
-            <a href="">2015</a>
-            <a href="">2016</a>
-            <a href="">2017</a>
-            <a href="">2018</a>
-            <a href="">2019</a>
-            <a href="">2020</a>
-            <a href="">2021</a>
-            <a href="">2022</a>
-            <a href="">2023</a>
-            <a href="">2024</a>
-            <a href="">2025</a>
-          </div>
-        </div>
+        <a class="men" href="#">КАТАЛОГ</a>
         <a class="men" href="#" id="contactLink">КОНТАКТИ</a>
       </div>
       <form class="serc" action="">
@@ -73,7 +27,6 @@
       <button class="auto1">Реєстрація</button>
     </nav>
     <header>
-      <section id="anime-list" class="anime-list"></section>
       <button id="toggle-music" class="music-btn">🎵 Увімкнути музику</button>
       <audio id="bg-music" loop>
         <source
@@ -318,8 +271,8 @@
     </footer>
 
     <div id="rulesModal" class="modal">
-     <div class="modal-content">
-       <span class="close-btn" id="closeRules">&times;</span>
+      <div class="modal-content">
+        <span class="close-btn" id="closeRules">&times;</span>
         <h2>Загальні правила поведінки на сайті</h2>
         <div class="rules-text">
           <p>
@@ -620,44 +573,44 @@
       </div>
     </div>
     <script>
-  const contactLink = document.getElementById('contactLink');
-  const contactModal = document.getElementById('contactModal');
-  const closeBtn = document.getElementById('closeContact');
+      const contactLink = document.getElementById("contactLink");
+      const contactModal = document.getElementById("contactModal");
+      const closeBtn = document.getElementById("closeContact");
 
-  contactLink.addEventListener('click', (e) => {
-    e.preventDefault();
-    contactModal.style.display = 'flex';
-  });
+      contactLink.addEventListener("click", (e) => {
+        e.preventDefault();
+        contactModal.style.display = "flex";
+      });
 
-  closeBtn.addEventListener('click', () => {
-    contactModal.style.display = 'none';
-  });
+      closeBtn.addEventListener("click", () => {
+        contactModal.style.display = "none";
+      });
 
-  window.addEventListener('click', (e) => {
-    if (e.target === contactModal) {
-      contactModal.style.display = 'none';
-    }
-  });
-</script>
-<script>
-  const rulesBtn = document.getElementById('rulesBtn');
-  const rulesModal = document.getElementById('rulesModal');
-  const closeRules = document.getElementById('closeRules');
+      window.addEventListener("click", (e) => {
+        if (e.target === contactModal) {
+          contactModal.style.display = "none";
+        }
+      });
+    </script>
+    <script>
+      const rulesBtn = document.getElementById("rulesBtn");
+      const rulesModal = document.getElementById("rulesModal");
+      const closeRules = document.getElementById("closeRules");
 
-  rulesBtn.addEventListener('click', (e) => {
-    e.preventDefault();
-    rulesModal.style.display = 'flex';
-  });
+      rulesBtn.addEventListener("click", (e) => {
+        e.preventDefault();
+        rulesModal.style.display = "flex";
+      });
 
-  closeRules.addEventListener('click', () => {
-    rulesModal.style.display = 'none';
-  });
+      closeRules.addEventListener("click", () => {
+        rulesModal.style.display = "none";
+      });
 
-  window.addEventListener('click', (e) => {
-    if (e.target === rulesModal) {
-      rulesModal.style.display = 'none';
-    }
-  });
-</script>
+      window.addEventListener("click", (e) => {
+        if (e.target === rulesModal) {
+          rulesModal.style.display = "none";
+        }
+      });
+    </script>
   </body>
 </html>
