--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <div class="out-pop pop-anime">
         <div class="phhh1">
-          <a href=""
+          <a href="./anime-title/atacktitans.html"
             ><img
               class="popph"
               src="./assets/img/atacktit.jpg"
