--- a/anime-title/atacktitans.html
+++ b/anime-title/atacktitans.html
@@ -189,29 +189,29 @@
 
       <div class="video-wrapper" id="video-container">
         <iframe
-          src="https://vn5614.tigerlips.org/720/2147383406.mp4?md5=HXt98aY9SGzcaL3VtPzinA&time=1747435022&d=1"
+          src="https://lando.animedia.pro/2147383406.mp4?md5=ymQ83IscKF5HGqy7DJww7g&time=1747513047"
           allowfullscreen
         ></iframe>
       </div>
 
       <div class="episodes">
         <button
-          data-src="https://vn5614.tigerlips.org/720/2147383406.mp4?md5=HXt98aY9SGzcaL3VtPzinA&time=1747435022&d=1"
+          data-src="https://lando.animedia.pro/2147383406.mp4?md5=ymQ83IscKF5HGqy7DJww7g&time=1747513047"
         >
           Серія 1
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/2147383407.mp4?md5=9t-wg7JeEOb961eZNTRGBg&time=1747435214&d=1"
+          data-src="https://lando.animedia.pro/2147383407.mp4?md5=7H3_4Z_rRypGEkXBXiW4xQ&time=1747513194"
         >
           Серія 2
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/2147383405.mp4?md5=9VIENE-VbMv0juP4O-SXig&time=1747437492&d=1"
+          data-src="https://lando.animedia.pro/2147383405.mp4?md5=XikR6ZYV7ZtPcK8rjOzgfQ&time=1747513254"
         >
           Серія 3
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/2147383408.mp4?md5=kvxaV8-2TO6R3rpseumvgg&time=1747437711&d=1"
+          data-src="https://lando.animedia.pro/2147383408.mp4?md5=c0dT2VIAEN1EC83wPc1IXg&time=1747513279"
         >
           Серія 4
         </button>
