--- a/anime-title/atacktitans.html
+++ b/anime-title/atacktitans.html
@@ -122,6 +122,7 @@
         .container {
           margin: 15px;
           padding: 15px;
+          overflow: hidden;
         }
         .info-flex {
           display: flex;
@@ -132,11 +133,14 @@
           padding: 15px;
         }
         .description {
-          padding-left: 1em;
-          width: 19em;
+          padding-left: 3vw;
+          width: 80vw;
+          text-align: center;
+          padding-top: 1em;
         }
         .img-ava {
-          margin-left: 1em;
+          margin-left: 4vw;
+          align-items: center;
         }
       }
     </style>
